# Konure

./: Cargo.toml  README.md
src/: hangul.rs  lib.rs  normalizer.rs  tokenizer.rs
