[package]
name = "konure"
description = ""
version = "0.1.0"
authors = ["Seungjae Park <astr36@naver.com>"]
edition = "2018"
documentation = "https://docs.rs/hangul"
repository = "https://github.com/Astro36/hangul"
readme = "README.md"
keywords = ["korean", "alphabet", "hangul", "tool"]
license = "MIT"

[dependencies]
lazy_static = "1.2"
rayon = "1.0"
regex = "1"
